--- a/ide/imexportcompileropts.lfm
+++ b/ide/imexportcompileropts.lfm
@@ -1,140 +1,122 @@
 object ImExportCompOptsDlg: TImExportCompOptsDlg
-  Left = 316
-  Height = 235
-  Top = 212
-  Width = 554
+  Left = 416
+  Height = 127
+  Top = 208
+  Width = 687
   Caption = 'ImExportCompOptsDlg'
-  ClientHeight = 235
-  ClientWidth = 554
+  ClientHeight = 127
+  ClientWidth = 687
+  Constraints.MinHeight = 113
+  Constraints.MinWidth = 658
   OnClose = ImExportCompOptsDlgCLOSE
   OnCreate = ImExportCompOptsDlgCREATE
   LCLVersion = '1.3'
-  object OpenRecentGroupbox: TGroupBox
-    AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = Owner
-    AnchorSideRight.Control = Owner
-    AnchorSideRight.Side = asrBottom
-    AnchorSideBottom.Control = CancelButton
+  object ButtonPanel1: TButtonPanel
     Left = 6
-    Height = 191
-    Top = 6
-    Width = 542
-    Anchors = [akTop, akLeft, akRight, akBottom]
-    BorderSpacing.Around = 6
-    Caption = 'OpenRecentGroupbox'
-    ClientHeight = 173
-    ClientWidth = 538
+    Height = 41
+    Top = 80
+    Width = 675
+    OKButton.Name = 'OKButton'
+    OKButton.DefaultCaption = True
+    HelpButton.Name = 'HelpButton'
+    HelpButton.DefaultCaption = True
+    CloseButton.Name = 'CloseButton'
+    CloseButton.DefaultCaption = True
+    CancelButton.Name = 'CancelButton'
+    CancelButton.DefaultCaption = True
     TabOrder = 0
-    object RecentListbox: TListBox
-      AnchorSideLeft.Control = OpenRecentGroupbox
-      AnchorSideTop.Control = OpenRecentGroupbox
-      AnchorSideRight.Control = OpenRecentGroupbox
-      AnchorSideRight.Side = asrBottom
-      AnchorSideBottom.Control = OpenRecentButton
-      Left = 6
-      Height = 132
-      Top = 6
-      Width = 526
-      Align = alTop
-      Anchors = [akTop, akLeft, akRight, akBottom]
-      BorderSpacing.Around = 6
-      ClickOnSelChange = False
-      ItemHeight = 0
-      OnClick = RecentListboxCLICK
-      OnDblClick = RecentListboxDBLCLICK
-      TabOrder = 0
-    end
-    object OpenRecentButton: TButton
-      AnchorSideLeft.Control = OpenRecentGroupbox
-      AnchorSideBottom.Control = OpenRecentGroupbox
-      AnchorSideBottom.Side = asrBottom
-      Left = 6
-      Height = 23
-      Top = 144
-      Width = 118
-      Anchors = [akLeft, akBottom]
-      AutoSize = True
-      BorderSpacing.Around = 6
-      Caption = 'OpenRecentButton'
-      Constraints.MinWidth = 75
-      OnClick = OpenRecentButtonCLICK
-      TabOrder = 1
-    end
-    object SaveToRecentButton: TButton
-      AnchorSideLeft.Control = OpenRecentButton
-      AnchorSideLeft.Side = asrBottom
-      AnchorSideBottom.Control = OpenRecentGroupbox
-      AnchorSideBottom.Side = asrBottom
-      Left = 130
-      Height = 23
-      Top = 144
-      Width = 130
-      Anchors = [akLeft, akBottom]
-      AutoSize = True
-      BorderSpacing.Around = 6
-      Caption = 'SaveToRecentButton'
-      OnClick = SaveToRecentButtonCLICK
-      TabOrder = 2
-    end
+    ShowButtons = [pbOK, pbCancel, pbHelp]
   end
-  object OpenButton: TBitBtn
-    AnchorSideTop.Control = CancelButton
-    AnchorSideRight.Control = SaveButton
-    AnchorSideBottom.Control = Owner
-    AnchorSideBottom.Side = asrBottom
-    Left = 293
-    Height = 26
-    Top = 203
-    Width = 84
-    Anchors = [akTop, akRight, akBottom]
-    AutoSize = True
+  object HistoryLabel: TLabel
+    Left = 16
+    Height = 15
+    Top = 16
+    Width = 44
+    Caption = 'History'
+    ParentColor = False
+  end
+  object HistoryButton: TButton
+    AnchorSideLeft.Control = HistoryLabel
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = HistoryLabel
+    AnchorSideTop.Side = asrCenter
+    Left = 66
+    Height = 25
+    Hint = 'Recent files'
+    Top = 11
+    Width = 35
     BorderSpacing.Left = 6
-    BorderSpacing.Right = 6
-    BorderSpacing.Bottom = 6
-    Caption = 'OpenButton'
-    Constraints.MinWidth = 75
-    NumGlyphs = 0
-    OnClick = OpenButtonCLICK
+    Caption = '>>'
+    OnClick = HistoryButtonClick
+    ParentShowHint = False
+    PopupMenu = RecentPopupMenu
+    ShowHint = True
     TabOrder = 1
   end
-  object SaveButton: TBitBtn
-    AnchorSideTop.Control = CancelButton
-    AnchorSideRight.Control = CancelButton
-    AnchorSideBottom.Control = Owner
-    AnchorSideBottom.Side = asrBottom
-    Left = 383
-    Height = 26
-    Top = 203
-    Width = 82
-    Anchors = [akTop, akRight, akBottom]
-    AutoSize = True
+  object FileLabel: TLabel
+    AnchorSideLeft.Control = HistoryLabel
+    AnchorSideTop.Control = HistoryLabel
+    AnchorSideTop.Side = asrBottom
+    Left = 16
+    Height = 15
+    Top = 46
+    Width = 20
+    BorderSpacing.Top = 15
+    Caption = 'File'
+    ParentColor = False
+  end
+  object FileNameEdit: TFileNameEdit
+    AnchorSideLeft.Control = FileLabel
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = FileLabel
+    AnchorSideTop.Side = asrCenter
+    Left = 42
+    Height = 25
+    Top = 41
+    Width = 431
+    DialogOptions = [ofExtensionDifferent, ofEnableSizing, ofViewDetail]
+    Filter = 'XML file (*.xml)|*.xml|Project file (*.lpi)|*.lpi|Package file (*.lpk)|*.lpk|Session file (*.lps)|*.lps|All files (*)|*'
+    FilterIndex = 0
+    HideDirectories = False
+    ButtonWidth = 23
+    NumGlyphs = 1
     BorderSpacing.Left = 6
-    BorderSpacing.Right = 6
-    BorderSpacing.Bottom = 6
-    Caption = 'SaveButton'
-    Constraints.MinWidth = 75
-    NumGlyphs = 0
-    OnClick = SaveButtonCLICK
+    MaxLength = 0
+    ParentShowHint = False
+    PopupMenu = RecentPopupMenu
     TabOrder = 2
   end
-  object CancelButton: TBitBtn
-    AnchorSideRight.Control = Owner
-    AnchorSideRight.Side = asrBottom
-    AnchorSideBottom.Control = Owner
-    AnchorSideBottom.Side = asrBottom
-    Left = 471
-    Height = 26
-    Top = 203
-    Width = 77
-    Anchors = [akRight, akBottom]
-    AutoSize = True
-    BorderSpacing.Around = 6
-    Cancel = True
-    Caption = 'Cancel'
-    Constraints.MinWidth = 75
-    Kind = bkCancel
-    ModalResult = 2
-    NumGlyphs = 0
+  object ExportRadioGroup: TRadioGroup
+    AnchorSideLeft.Control = FileNameEdit
+    AnchorSideLeft.Side = asrBottom
+    Left = 488
+    Height = 60
+    Top = 3
+    Width = 185
+    AutoFill = True
+    BorderSpacing.Left = 15
+    Caption = 'Save compiler options of'
+    ChildSizing.LeftRightSpacing = 6
+    ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+    ChildSizing.EnlargeVertical = crsHomogenousChildResize
+    ChildSizing.ShrinkHorizontal = crsScaleChilds
+    ChildSizing.ShrinkVertical = crsScaleChilds
+    ChildSizing.Layout = cclLeftToRightThenTopToBottom
+    ChildSizing.ControlsPerLine = 1
+    ClientHeight = 41
+    ClientWidth = 181
+    ItemIndex = 0
+    Items.Strings = (
+      'Current build mode'
+      'All build modes'
+    )
     TabOrder = 3
+    Visible = False
+  end
+  object RecentPopupMenu: TPopupMenu
+    left = 376
+    object MenuItem1: TMenuItem
+      Caption = 'New Item1'
+    end
   end
 end
