--- a/ide/imexportcompileropts.lfm
+++ b/ide/imexportcompileropts.lfm
@@ -2,12 +2,12 @@ object ImExportCompOptsDlg: TImExportCompOptsDlg
   Left = 416
   Height = 127
   Top = 208
-  Width = 687
+  Width = 688
   Caption = 'ImExportCompOptsDlg'
   ClientHeight = 127
-  ClientWidth = 687
+  ClientWidth = 688
   Constraints.MinHeight = 113
-  Constraints.MinWidth = 658
+  Constraints.MinWidth = 300
   OnClose = ImExportCompOptsDlgCLOSE
   OnCreate = ImExportCompOptsDlgCREATE
   LCLVersion = '1.3'
@@ -15,7 +15,7 @@ object ImExportCompOptsDlg: TImExportCompOptsDlg
     Left = 6
     Height = 41
     Top = 80
-    Width = 675
+    Width = 676
     OKButton.Name = 'OKButton'
     OKButton.DefaultCaption = True
     HelpButton.Name = 'HelpButton'
@@ -90,12 +90,12 @@ object ImExportCompOptsDlg: TImExportCompOptsDlg
     AnchorSideLeft.Control = FileNameEdit
     AnchorSideLeft.Side = asrBottom
     Left = 488
-    Height = 60
-    Top = 3
+    Height = 62
+    Top = 6
     Width = 185
     AutoFill = True
     BorderSpacing.Left = 15
-    Caption = 'Save compiler options of'
+    Caption = 'Compiler options of'
     ChildSizing.LeftRightSpacing = 6
     ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
     ChildSizing.EnlargeVertical = crsHomogenousChildResize
@@ -103,7 +103,7 @@ object ImExportCompOptsDlg: TImExportCompOptsDlg
     ChildSizing.ShrinkVertical = crsScaleChilds
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
-    ClientHeight = 41
+    ClientHeight = 43
     ClientWidth = 181
     ItemIndex = 0
     Items.Strings = (
@@ -111,7 +111,6 @@ object ImExportCompOptsDlg: TImExportCompOptsDlg
       'All build modes'
     )
     TabOrder = 3
-    Visible = False
   end
   object RecentPopupMenu: TPopupMenu
     left = 376
