--- a/doceditor/frmbuild.lfm
+++ b/doceditor/frmbuild.lfm
@@ -13,7 +13,7 @@ object BuildForm: TBuildForm
   OnCreate = BuildFormCreate
   OnResize = FormResize
   OnShow = FormResize
-  LCLVersion = '1.1'
+  LCLVersion = '1.3'
   object LCBPackage: TLabel
     AnchorSideLeft.Control = CBFormat
     AnchorSideLeft.Side = asrBottom
@@ -103,9 +103,9 @@ object BuildForm: TBuildForm
     Height = 278
     Top = 134
     Width = 604
-    ActivePage = TSDescription
+    ActivePage = TSOther
     Anchors = [akTop, akLeft, akRight, akBottom]
-    TabIndex = 0
+    TabIndex = 2
     TabOrder = 2
     object TSDescription: TTabSheet
       Hint = 'Description/XML files with help text'
@@ -204,18 +204,18 @@ object BuildForm: TBuildForm
     object TSSources: TTabSheet
       Hint = 'Pascal sources documented by the description files'
       Caption = 'Sources'
-      ClientHeight = 219
+      ClientHeight = 252
       ClientWidth = 596
       object PSources: TPanel
         Left = 527
-        Height = 219
+        Height = 252
         Hint = 'Pascal sources documented by the description files'
         Top = 0
         Width = 69
         Align = alRight
         AutoSize = True
         BevelOuter = bvNone
-        ClientHeight = 219
+        ClientHeight = 252
         ClientWidth = 69
         FullRepaint = False
         TabOrder = 0
@@ -269,7 +269,7 @@ object BuildForm: TBuildForm
       end
       object SGSources: TStringGrid
         Left = 0
-        Height = 219
+        Height = 252
         Hint = 'Pascal sources documented by the description files'
         Top = 0
         Width = 527
@@ -355,7 +355,7 @@ object BuildForm: TBuildForm
         Left = 6
         Height = 17
         Top = 29
-        Width = 127
+        Width = 125
         BorderSpacing.Around = 6
         Caption = 'Show p&rivate methods'
         TabOrder = 0
@@ -366,7 +366,7 @@ object BuildForm: TBuildForm
         Left = 6
         Height = 17
         Top = 6
-        Width = 135
+        Width = 133
         BorderSpacing.Around = 6
         Caption = '&Hide protected methods'
         TabOrder = 1
@@ -378,7 +378,7 @@ object BuildForm: TBuildForm
         Left = 6
         Height = 17
         Top = 52
-        Width = 202
+        Width = 200
         BorderSpacing.Around = 6
         Caption = 'Warn if no documentation node found'
         TabOrder = 2
@@ -456,11 +456,11 @@ object BuildForm: TBuildForm
     end
     object TSBuild: TTabSheet
       Caption = 'Build output'
-      ClientHeight = 219
+      ClientHeight = 252
       ClientWidth = 596
       object MLog: TMemo
         Left = 0
-        Height = 219
+        Height = 252
         Top = 0
         Width = 596
         Align = alClient
@@ -479,10 +479,10 @@ object BuildForm: TBuildForm
     Width = 490
     Anchors = [akTop, akLeft, akRight]
     ButtonWidth = 23
-    CharCase = ecNormal
     MaxLength = 0
     NumGlyphs = 1
     OnButtonClick = EOutputButtonClick
+    PasswordChar = #0
     TabOrder = 3
   end
   object CBContent: TCheckBox
@@ -493,7 +493,7 @@ object BuildForm: TBuildForm
     Left = 46
     Height = 17
     Top = 75
-    Width = 110
+    Width = 108
     BorderSpacing.Around = 6
     Caption = 'Create cont&ent file'
     TabOrder = 4
@@ -585,7 +585,7 @@ object BuildForm: TBuildForm
     Left = 16
     Height = 17
     Top = 52
-    Width = 67
+    Width = 65
     BorderSpacing.Around = 4
     Caption = 'Auto TOC'
     Checked = True
@@ -597,10 +597,10 @@ object BuildForm: TBuildForm
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = CBAutoTOC
     AnchorSideTop.Side = asrCenter
-    Left = 87
+    Left = 85
     Height = 17
     Top = 52
-    Width = 74
+    Width = 72
     BorderSpacing.Around = 4
     Caption = 'Auto Index'
     Checked = True
@@ -612,10 +612,10 @@ object BuildForm: TBuildForm
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = CBAutoIndex
     AnchorSideTop.Side = asrCenter
-    Left = 165
+    Left = 161
     Height = 17
     Top = 52
-    Width = 101
+    Width = 99
     BorderSpacing.Around = 4
     Caption = 'Make Searchable'
     Checked = True
